@@ -1,4 +1,4 @@
-$NetBSD: CHANGES-2007,v 1.1686 2007/08/03 07:00:55 seb Exp $
+$NetBSD: CHANGES-2007,v 1.1687 2007/08/03 11:02:06 obache Exp $
 
 Changes to the packages collection and infrastructure in 2007:
 
@@ -3104,3 +3104,4 @@ Changes to the packages collection and infrastructure in 2007:
 	Added mail/claws-mail-trayicon version 2.10.0 [smb 2007-08-02]
 	Added devel/p5-Class-XML version 0.06 [seb 2007-08-03]
 	Updated lang/erlang to 11.5nb1 [obache 2007-08-03]
+	Updated net/teamspeak-server to 2.0.23.19 [abs 2007-08-03]
